# podman-ci-demo

./: .clang-format  .gitignore  CMakeLists.txt  Containerfile  LICENSE  README.md  check-format.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: podman-ci.yml
src/: CMakeLists.txt  hello.c  main.cpp
